# django_template

./: .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml  tailwind.config.js
.github/workflows/: test.yaml
project_name/: urls.py  views.py  wsgi.py
project_name/settings/: common.py  dev.py  testing.py
templates/: base.html  index.html
