[project]
name = "{{ project_name }}"
version = "0.1"
requires-python = ">= 3.12"
dependencies = [
    "django >5.0",
    "environs[django]",
    "django-htmx",
    "django-template-partials",
]

[project.optional-dependencies]
dev = [
    "django-browser-reload",
    "django-debug-toolbar",
    "django-extensions",
    "django-tailwind-cli",
    "djlint",
    "pre-commit",
    "ruff",
    "pywatchman",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E741", "F405"]

# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]

[tool.bandit]
skips = ["B101","B311"]

[tool.djlint]
ignore="T002,H006"

[tool.coverage.report]
fail_under = 100
omit = [
    "*/migrations/*",
]
show_missing = true
skip_covered = true




